Update 'hakdoe5r3-java-springboot' component image to: quay.io/rhtap_qe/rhtap-qe-java-springboot:920955b02c60bef6f6739d8ddb0cf4ac56a34c28@sha256:a934d2267ff1ed9f8d480772dce5409479158011677a512455fb8421b4bd6e47

--- a/components/hakdoe5r3-java-springboot/overlays/development/deployment-patch.yaml
+++ b/components/hakdoe5r3-java-springboot/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: hakdoe5r3-java-springboot
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-java-springboot:920955b02c60bef6f6739d8ddb0cf4ac56a34c28@sha256:a934d2267ff1ed9f8d480772dce5409479158011677a512455fb8421b4bd6e47
+          name: container-image
